Archivo inicial js

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </style>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/main.js" type="module"></script>
+  <script src="./main.js" type="module"></script>
 </head>
 <body>
   <h1>Hello!</h1>
